--- a/application.ui
+++ b/application.ui
@@ -55,6 +55,15 @@ QLabel {
 	qproperty-alignment: &quot;AlignCenter | AlignVCenter&quot;;
 }
 
+QListWidget {
+	background-color: #555555;
+	border: 0;
+
+	font-size: 12px;
+
+	padding: 5px;
+}
+
 QPushButton {
 	background-color: #666666;
 
@@ -158,7 +167,7 @@ QWidget[TRANSPARENT=&quot;true&quot;] {
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="pageMain">
      <widget class="QLabel" name="labelMainTitle">
@@ -391,7 +400,7 @@ Jakub WYCIŚLIK</string>
      <widget class="QLineEdit" name="textJoinGamePort">
       <property name="geometry">
        <rect>
-        <x>430</x>
+        <x>540</x>
         <y>190</y>
         <width>150</width>
         <height>30</height>
@@ -404,7 +413,7 @@ Jakub WYCIŚLIK</string>
      <widget class="QLabel" name="labelJoinGamePort">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>320</x>
         <y>180</y>
         <width>200</width>
         <height>50</height>
@@ -423,7 +432,7 @@ Jakub WYCIŚLIK</string>
      <widget class="QLabel" name="labelJoinGameAddress">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>320</x>
         <y>250</y>
         <width>200</width>
         <height>50</height>
@@ -442,7 +451,7 @@ Jakub WYCIŚLIK</string>
      <widget class="QLineEdit" name="textJoinGameAddress">
       <property name="geometry">
        <rect>
-        <x>430</x>
+        <x>540</x>
         <y>260</y>
         <width>150</width>
         <height>30</height>
@@ -455,7 +464,7 @@ Jakub WYCIŚLIK</string>
      <widget class="QPushButton" name="btnJoinGame">
       <property name="geometry">
        <rect>
-        <x>200</x>
+        <x>310</x>
         <y>320</y>
         <width>380</width>
         <height>50</height>
@@ -468,7 +477,7 @@ Jakub WYCIŚLIK</string>
      <widget class="QLabel" name="labelJoinGameName">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>320</x>
         <y>110</y>
         <width>200</width>
         <height>50</height>
@@ -487,7 +496,7 @@ Jakub WYCIŚLIK</string>
      <widget class="QLineEdit" name="textJoinGameName">
       <property name="geometry">
        <rect>
-        <x>430</x>
+        <x>540</x>
         <y>120</y>
         <width>150</width>
         <height>30</height>
@@ -495,6 +504,32 @@ Jakub WYCIŚLIK</string>
       </property>
       <property name="placeholderText">
        <string>Username</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="labelJoinGameHistory">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>80</y>
+        <width>200</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Recent servers</string>
+      </property>
+      <property name="BORDER_BOTTOM" stdset="0">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QListWidget" name="listJoinHistory">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>150</y>
+        <width>200</width>
+        <height>260</height>
+       </rect>
       </property>
      </widget>
     </widget>
